# swagengine

./: .gitignore  Cargo.toml
src/: main.rs  player.rs  renderer.rs  resource_manager.rs  shader.wgsl  state.rs  world.rs
src/renderer/: common.rs
