[package]
name = "swagengine"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = "0.30.5"
winit = { version = "0.30" }
env_logger = "0.11"
log = "0.4"
wgpu = "26.0"
pollster = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
bincode = "2.0.1"
rand = "0.9.2"
rayon = "1.10.0"
tar = "0.4.44"
zstd = "0.13.3"
